--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
+    "excel4node": "^1.7.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
@@ -32,5 +33,4 @@
     "nodemon": "^2.0.6",
     "sequelize-cli": "^6.2.0"
   }
-
 }
